--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -2,6 +2,11 @@ name: Build Artifacts Only
 
 on:
   workflow_dispatch:
+    inputs:
+      description:
+        description: 'Build macOS artifacts for testing (unsigned builds require xattr command)'
+        required: false
+        default: 'See artifact download instructions below'
 
 jobs:
   build:
@@ -9,26 +14,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'macos-latest'
+          - platform: 'macos-14'
             args: '--target aarch64-apple-darwin'
             os_name: 'macOS'
             arch: 'arm64'
             target: 'aarch64-apple-darwin'
-          - platform: 'macos-latest'
+          - platform: 'macos-13'
             args: '--target x86_64-apple-darwin'
             os_name: 'macOS'
             arch: 'x64'
             target: 'x86_64-apple-darwin'
-          - platform: 'ubuntu-latest'
-            args: '--target x86_64-unknown-linux-gnu'
-            os_name: 'Linux'
-            arch: 'x64'
-            target: 'x86_64-unknown-linux-gnu'
-          - platform: 'windows-latest'
-            args: '--target x86_64-pc-windows-msvc'
-            os_name: 'Windows'
-            arch: 'x64'
-            target: 'x86_64-pc-windows-msvc'
 
     runs-on: ${{ matrix.platform }}
 
@@ -36,26 +31,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libsoup-3.0-dev \
-            build-essential \
-            curl \
-            wget \
-            file \
-            libssl-dev \
-            libgtk-3-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev \
-            patchelf \
-            libnss3-dev \
-            libxss1 \
-            libasound2-dev
 
       - name: Rust setup
         uses: dtolnay/rust-toolchain@stable
@@ -75,15 +50,14 @@ jobs:
       - name: Verify project structure and resources
         run: |
           echo "Verifying project structure..."
-          ls -la fincept-terminal-desktop/
-          ls -la fincept-terminal-desktop/src-tauri/
-          ls -la fincept-terminal-desktop/src-tauri/resources/
-          echo "Checking requirements.txt exists..."
-          if [ ! -f "fincept-terminal-desktop/src-tauri/resources/requirements.txt" ]; then
-            echo "Error: requirements.txt not found!"
+          if [ ! -f "fincept-terminal-desktop/src-tauri/resources/requirements-numpy1.txt" ]; then
+            echo "Error: requirements-numpy1.txt not found!"
             exit 1
           fi
-          echo "Checking scripts directory exists..."
+          if [ ! -f "fincept-terminal-desktop/src-tauri/resources/requirements-numpy2.txt" ]; then
+            echo "Error: requirements-numpy2.txt not found!"
+            exit 1
+          fi
           if [ ! -d "fincept-terminal-desktop/src-tauri/resources/scripts" ]; then
             echo "Error: scripts directory not found!"
             exit 1
@@ -126,29 +100,14 @@ jobs:
 
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-          # Find and rename artifacts based on platform
-          if [[ "${{ matrix.platform }}" == "macos-latest" ]]; then
-            # macOS builds
-            if [[ "${{ matrix.arch }}" == "arm64" ]]; then
-              SUFFIX="macOS-arm64"
-            else
-              SUFFIX="macOS-x64"
-            fi
-
-            find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.dmg" -exec cp {} release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.dmg \; 2>/dev/null && echo "[OK] Found .dmg" || echo "[WARN] No .dmg found"
-
-          elif [[ "${{ matrix.platform }}" == "ubuntu-latest" ]]; then
-            # Linux builds
-            SUFFIX="Linux-x64"
-            find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.AppImage" -exec cp {} release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.AppImage \; 2>/dev/null && echo "[OK] Found .AppImage" || echo "[WARN] No .AppImage found"
-            find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.deb" -exec cp {} release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.deb \; 2>/dev/null && echo "[OK] Found .deb" || echo "[WARN] No .deb found"
-            find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.rpm" -exec cp {} release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.rpm \; 2>/dev/null && echo "[OK] Found .rpm" || echo "[WARN] No .rpm found"
-
-          elif [[ "${{ matrix.platform }}" == "windows-latest" ]]; then
-            # Windows builds
-            SUFFIX="Windows-x64"
-            find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.msi" -exec cp {} release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.msi \; 2>/dev/null && echo "[OK] Found .msi" || echo "[WARN] No .msi found"
+          # macOS builds only
+          if [[ "${{ matrix.arch }}" == "arm64" ]]; then
+            SUFFIX="macOS-arm64"
+          else
+            SUFFIX="macOS-x64"
           fi
+
+          find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.dmg" -exec cp {} release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.dmg \; 2>/dev/null && echo "[OK] Found .dmg" || echo "[WARN] No .dmg found"
 
           # List what we found
           echo "=== Release Artifacts ==="
@@ -166,3 +125,34 @@ jobs:
           name: build-${{ matrix.os_name }}-${{ matrix.arch }}
           path: release-artifacts/
           retention-days: 30
+
+      - name: Installation Instructions
+        if: steps.prepare.outputs.artifact_count > 0
+        run: |
+          cat << 'EOF'
+
+          ========================================
+          macOS Installation Instructions
+          ========================================
+
+          IMPORTANT: This is an UNSIGNED build
+
+          After downloading the artifact:
+
+          1. Extract the ZIP file
+          2. Remove quarantine flag from DMG:
+
+             xattr -cr ~/Downloads/FinceptTerminal-*.dmg
+
+          3. Open DMG and drag app to Applications
+          4. Remove quarantine flag from app:
+
+             xattr -cr /Applications/FinceptTerminal.app
+
+          5. Launch the app normally
+
+          Alternative: Right-click app -> Open -> Open
+
+          ========================================
+          EOF
+        shell: bash
