--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -19,7 +19,7 @@ jobs:
             os_name: 'macOS'
             arch: 'arm64'
             target: 'aarch64-apple-darwin'
-          - platform: 'macos-13'
+          - platform: 'macos-15-intel'
             args: '--target x86_64-apple-darwin'
             os_name: 'macOS'
             arch: 'x64'
