--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -19,6 +19,12 @@
     "i18n:update": "bun scripts/sync-translations.js && bun scripts/translate-auto.js"
   },
   "dependencies": {
+    "@deck.gl/carto": "^9.2.5",
+    "@deck.gl/core": "^9.2.5",
+    "@deck.gl/geo-layers": "^9.2.5",
+    "@deck.gl/layers": "^9.2.5",
+    "@deck.gl/mapbox": "^9.2.5",
+    "@deck.gl/react": "^9.2.5",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -70,6 +76,7 @@
     "cmdk": "^1.1.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "deck.gl": "^9.2.5",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.16.0",
     "fyers-web-sdk-v3": "^1.3.1",
@@ -86,6 +93,7 @@
     "libphonenumber-js": "^1.12.33",
     "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.544.0",
+    "maplibre-gl": "^5.16.0",
     "next-themes": "^0.4.6",
     "ollama": "^0.6.0",
     "otpauth": "^9.4.1",
@@ -99,13 +107,16 @@
     "react-dom": "^19.1.0",
     "react-grid-layout": "^1.5.2",
     "react-i18next": "^16.3.5",
+    "react-map-gl": "^8.1.0",
     "react-markdown": "^10.1.0",
     "react-phone-number-input": "^3.4.14",
     "react-plotly.js": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
     "reactflow": "^11.11.4",
     "readable-stream": "^4.7.0",
     "recharts": "^2.15.4",
+    "redux": "^5.0.1",
     "remark-gfm": "^3.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
