--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fincept-terminal-desktop",
   "private": true,
-  "version": "3.1.5",
+  "version": "3.1.6",
   "type": "module",
   "license": "AGPL-3.0-or-later",
   "scripts": {
@@ -12,6 +12,7 @@
     "tauri:dev": "bun run tauri dev",
     "tauri:build": "bun run tauri build",
     "tauri:build:msstore": "bun run tauri build --config src-tauri/tauri.microsoftstore.conf.json",
+    "sync-version": "bun scripts/sync-version.js",
     "bump-version": "bun scripts/bump-version.js",
     "i18n:audit": "bun scripts/audit-translations.js",
     "i18n:sync": "bun scripts/sync-translations.js",
